--- a/style/css.css
+++ b/style/css.css
@@ -2,35 +2,60 @@
     display: flex;
     flex-direction: column;
     margin-left: 10%;
-}
+  }
 
-.inner_cont {
+  .inner_cont {
     display: flex;
     flex-direction: row;
-}
+  }
 
-h1 {
+  h1 {
     margin-left: 45%;
-}
+    font-size: 30px;
+  }
 
-input {
+  input {
     width: 30%;
-    height: 35px;
+    height: 40px;
     margin-right: 15px;
     border: 2px solid rgb(178, 177, 177, 0.2);
-}
+  }
 
-input:hover {
+  input:hover {
     border: 2px solid rgb(97, 176, 123);
-}
+    background-color: rgb(229, 247, 241);
+  }
 
-#btn_add:hover {
+  #btn_add:hover {
     border: 3px solid rgb(30, 79, 57, 0.4);
-}
+  }
 
-#btn_add {
+  #btn_add {
     width: 150px;
     height: 40px;
     background-color: rgb(97, 176, 123);
+    border-radius: 5px;
     border: 2px solid rgba(81, 170, 131, 0.3);
-}
+  }
+
+  .divPost {
+    border: 2px solid gray;
+    border-style: dashed;
+    width: 75%;
+    padding: 15px;
+    margin-top: 15px;
+  }
+
+  .date {
+    font-size: small;
+  }
+
+  .post_body,
+  input,
+  button {
+    font-size: 20px;
+  }
+
+  ::placeholder {
+    color: lightslategray;
+  }
